<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.LoginActivity">

    <!-- Login progress -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_marginBottom="50dp"
                    android:scaleType="centerInside"
                    android:layout_width="200dp"
                    android:layout_height="90dp"
                    android:src="@drawable/logo_monira_06" />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_emai"
                    android:textSize="16sp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#A8A5A5"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/abel_regular"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textSize="16sp"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#A8A5A5"
                    android:fontFamily="@font/abel_regular"
                    android:layout_marginTop="15dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_margin="16dp">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/sign_in_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:paddingLeft="32dp"
                        android:paddingRight="32dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/action_sign_in_short"/>
                </FrameLayout>
                <TextView
                    android:id="@+id/login_status_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textIsSelectable="false"
                    android:padding="10dp" android:alpha="0.6"/>


                <TextView
                    android:id="@+id/appversion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal" android:textStyle="bold"
                    android:textSize="16sp"
                    android:textIsSelectable="false"
                    android:padding="10dp" android:alpha="0.6"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</merge>